c4prj3_finish/grade.txt
Grading at Thu Apr  4 07:34:56 UTC 2019
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o deck.o deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o eval.o eval.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o future.o future.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o input.o input.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o main.o main.c
main.c: In function ‘strToInt’:
main.c:12:16: error: implicit declaration of function ‘strlen’ [-Werror=implicit-function-declaration]
   size_t len = strlen(str);
                ^
main.c:12:16: error: incompatible implicit declaration of built-in function ‘strlen’ [-Werror]
main.c:12:16: note: include ‘<string.h>’ or provide a declaration of ‘strlen’
cc1: all warnings being treated as errors
<builtin>: recipe for target 'main.o' failed
make: *** [main.o] Error 1
make failed

Overall Grade: F
